--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,6 +1,9 @@
 {
     "ext_name": {"message": "Хранитель Вкладок"},
     "ext_description": {"message": "Расширение для браузера, которое позволяет сохранять и восстанавливать ваши вкладки, включая их шифрование с использованием пароля"},
+    "details": {"message": "Детали"},
+    "group_details": {"message": "Детали Группы"},
+    "you_can_find_details_here": {"message": "Ты можешь найти все детали группы здесь"},
     "yes": {"message": "Да"},
     "no": {"message": "Нет"},
     "lock": {"message": "Заблокировать"},
