WIP on group details #20

--- a/src/_locales/en_US/messages.json
+++ b/src/_locales/en_US/messages.json
@@ -3,7 +3,11 @@
     "ext_description": {"message": "Browser extension that allows you to save and restore your tabs including encrypting them with a password"},
     "details": {"message": "Details"},
     "group_details": {"message": "Group Details"},
+    "tabs_count": {"message": "Tabs count"},
     "you_can_find_details_here": {"message": "You can find all of your group details here"},
+    "is_private": {"message": "Is private"},
+    "created_at": {"message": "Created at"},
+    "updated_at": {"message": "Updated at"},
     "yes": {"message": "Yes"},
     "no": {"message": "No"},
     "lock": {"message": "Lock"},
