--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -4,12 +4,16 @@
     "details": {"message": "Детали"},
     "group_details": {"message": "Детали Группы"},
     "you_can_find_details_here": {"message": "Ты можешь найти все детали группы здесь"},
+    "tabs_count": {"message": "Кол-во вкладок"},
+    "is_private": {"message": "Приватная"},
+    "created_at": {"message": "Создано"},
+    "updated_at": {"message": "Обновлено"},
     "yes": {"message": "Да"},
     "no": {"message": "Нет"},
     "lock": {"message": "Заблокировать"},
     "emoji": {"message": "Эмодзи"},
     "bytes": {"message": "байт"},
-    "rebind": {"message": "Перепривязать"},
+    "rebind": {"message": "Отвязать"},
     "select": {"message": "Выбрать"},
     "cancel": {"message": "Отмена"},
     "import": {"message": "Импортировать"},
@@ -69,10 +73,10 @@
     "repeat_pass": {"message": "Повторите пароль"},
     "passwords_not_match": {"message": "Пароли не совпадают"},
     "export_this_group": {"message": "Экспортировать"},
-    "rebind_to_other_url": {"message": "Перепривязать к другому URL"},
+    "rebind_to_other_url": {"message": "Привязать к другому URL"},
     "enter_new_url_bind_private_to_new_url": {"message": "Введите новый URL для привязки вашей приватной группы. Эта группа будет видна только при посещении указанного URL. Не забудьте заблокировать группу"},
     "enter_new_url_bind_to": {"message": "Введите новый URL для привязки"},
-    "group_rebind_successful": {"message": "Группа успешно перепривязана"},
+    "group_rebind_successful": {"message": "Группа успешно пере-привязана"},
     "url_must_start_with_http": {"message": "URL должен начинаться с http:// или https://"},
     "select_emoji": {"message": "Эмодзи"},
     "select_image": {"message": "Изображение"},
