--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -4,6 +4,10 @@
     "details": {"message": "详情"},
     "group_details": {"message": "组详情"},
     "you_can_find_details_here": {"message": "您可以在这里找到所有的组详情"},
+    "tabs_count": {"message": "标签页数量"},
+    "is_private": {"message": "是否私有"},
+    "created_at": {"message": "创建于"},
+    "updated_at": {"message": "更新于"},
     "yes": {"message": "是"},
     "no": {"message": "否"},
     "lock": {"message": "锁定"},
