Add group details page closes #20

--- a/src/_locales/en_US/messages.json
+++ b/src/_locales/en_US/messages.json
@@ -14,6 +14,7 @@
     "emoji": {"message": "Emoji"},
     "bytes": {"message": "bytes"},
     "rebind": {"message": "Rebind"},
+    "bound_to_url": {"message": "Bound to URL"},
     "select": {"message": "Select"},
     "cancel": {"message": "Cancel"},
     "import": {"message": "Import"},
@@ -60,7 +61,7 @@
     "group_created_without_tabs": {"message": "Group created without any tabs selected"},
     "group_created_with_tabs": {"message": "Group created with tabs"},
     "close_selected_tabs": {"message": "Close selected tabs"},
-    "bind_to_url": {"message": "Bind to this URL"},
+    "bind_to_this_url": {"message": "Bind to this URL"},
     "private_groups_are_secure": {"message": "Private groups are secure and use encryption. Only users with the password can access them"},
     "rate_us": {"message": "Rate Us"},
     "storage_usage": {"message": "Storage usage"},
