--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -14,6 +14,7 @@
     "emoji": {"message": "Эмодзи"},
     "bytes": {"message": "байт"},
     "rebind": {"message": "Отвязать"},
+    "bound_to_url": {"message": "Привязана к URL"},
     "select": {"message": "Выбрать"},
     "cancel": {"message": "Отмена"},
     "import": {"message": "Импортировать"},
@@ -60,7 +61,7 @@
     "group_created_without_tabs": {"message": "Группа создана без выбранных вкладок"},
     "group_created_with_tabs": {"message": "Группа создана с вкладками"},
     "close_selected_tabs": {"message": "Закрыть выбранное"},
-    "bind_to_url": {"message": "Привязать к URL"},
+    "bind_to_this_url": {"message": "Привязать к URL"},
     "private_groups_are_secure": {"message": "Приватные группы защищены и используют шифрование. Доступ к ним имеют только пользователи с паролем"},
     "rate_us": {"message": "Оцените нас"},
     "storage_usage": {"message": "Хранилище"},
