--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -14,6 +14,7 @@
     "emoji": {"message": "表情符号"},
     "bytes": {"message": "字节"},
     "rebind": {"message": "重新绑定"},
+    "bound_to_url": {"message": "绑定到 URL"},
     "select": {"message": "选择"},
     "cancel": {"message": "取消"},
     "import": {"message": "导入"},
@@ -60,7 +61,7 @@
     "group_created_without_tabs": {"message": "创建的组没有任何标签页"},
     "group_created_with_tabs": {"message": "创建的组包含标签页"},
     "close_selected_tabs": {"message": "关闭选中的标签页"},
-    "bind_to_url": {"message": "绑定到此 URL"},
+    "bind_to_this_url": {"message": "绑定到此 URL"},
     "private_groups_are_secure": {"message": "私有组是安全的并使用加密。只有知道密码的用户可以访问"},
     "rate_us": {"message": "评价我们"},
     "storage_usage": {"message": "存储使用"},
