Add group views and group opened tabs to details
Now we count how many times the group was viewed and opened

--- a/src/_locales/en_US/messages.json
+++ b/src/_locales/en_US/messages.json
@@ -15,6 +15,8 @@
     "bytes": {"message": "bytes"},
     "rebind": {"message": "Rebind"},
     "bound_to_url": {"message": "Bound to URL"},
+    "group_views": {"message": "Group views"},
+    "opened_tabs_times": {"message": "Opened tabs times"},
     "select": {"message": "Select"},
     "cancel": {"message": "Cancel"},
     "import": {"message": "Import"},
