--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -15,6 +15,8 @@
     "bytes": {"message": "байт"},
     "rebind": {"message": "Отвязать"},
     "bound_to_url": {"message": "Привязана к URL"},
+    "group_views": {"message": "Просмотров группы"},
+    "opened_tabs_times": {"message": "Открыто вкладок раз"},
     "select": {"message": "Выбрать"},
     "cancel": {"message": "Отмена"},
     "import": {"message": "Импортировать"},
