--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -15,6 +15,8 @@
     "bytes": {"message": "字节"},
     "rebind": {"message": "重新绑定"},
     "bound_to_url": {"message": "绑定到 URL"},
+    "group_views": {"message": "组浏览次数"},
+    "opened_tabs_times": {"message": "打开标签页次数"},
     "select": {"message": "选择"},
     "cancel": {"message": "取消"},
     "import": {"message": "导入"},
