Add tooltips for some group details

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -7,7 +7,7 @@
     "tabs_count": {"message": "Кол-во вкладок"},
     "is_private": {"message": "Приватная"},
     "created_at": {"message": "Создано"},
-    "updated_at": {"message": "Обновлено"},
+    "last_saved": {"message": "Последнее сохранение"},
     "yes": {"message": "Да"},
     "no": {"message": "Нет"},
     "lock": {"message": "Заблокировать"},
@@ -16,7 +16,9 @@
     "rebind": {"message": "Отвязать"},
     "bound_to_url": {"message": "Привязана к URL"},
     "group_views": {"message": "Просмотров группы"},
+    "group_views_tip": {"message": "Количество просмотров этой группы"},
     "opened_tabs_times": {"message": "Открыто вкладок раз"},
+    "opened_tabs_times_tip": {"message": "Общее количество одновременных открытий вкладок в этой группе. Не индивидуальное количество открытых вкладок"},
     "select": {"message": "Выбрать"},
     "cancel": {"message": "Отмена"},
     "import": {"message": "Импортировать"},
