--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -7,7 +7,7 @@
     "tabs_count": {"message": "标签页数量"},
     "is_private": {"message": "是否私有"},
     "created_at": {"message": "创建于"},
-    "updated_at": {"message": "更新于"},
+    "last_saved": {"message": "最后保存"},
     "yes": {"message": "是"},
     "no": {"message": "否"},
     "lock": {"message": "锁定"},
@@ -16,7 +16,9 @@
     "rebind": {"message": "重新绑定"},
     "bound_to_url": {"message": "绑定到 URL"},
     "group_views": {"message": "组浏览次数"},
+    "group_views_tip": {"message": "此组被查看的次数"},
     "opened_tabs_times": {"message": "打开标签页次数"},
+    "opened_tabs_times_tip": {"message": "此组中的标签页被一次性打开的次数，而不是单个标签页的打开次数"},
     "select": {"message": "选择"},
     "cancel": {"message": "取消"},
     "import": {"message": "导入"},
