--- a/src/_locales/en_US/messages.json
+++ b/src/_locales/en_US/messages.json
@@ -7,7 +7,7 @@
     "you_can_find_details_here": {"message": "You can find all of your group details here"},
     "is_private": {"message": "Is private"},
     "created_at": {"message": "Created at"},
-    "updated_at": {"message": "Updated at"},
+    "last_saved": {"message": "Last saved"},
     "yes": {"message": "Yes"},
     "no": {"message": "No"},
     "lock": {"message": "Lock"},
@@ -16,7 +16,9 @@
     "rebind": {"message": "Rebind"},
     "bound_to_url": {"message": "Bound to URL"},
     "group_views": {"message": "Group views"},
+    "group_views_tip": {"message": "The number of times this group has been viewed"},
     "opened_tabs_times": {"message": "Opened tabs times"},
+    "opened_tabs_times_tip": {"message": "The number of times the tabs in this group have been opened at once. Not the individual tabs opened"},
     "select": {"message": "Select"},
     "cancel": {"message": "Cancel"},
     "import": {"message": "Import"},
