--- a/src/_locales/en_US/messages.json
+++ b/src/_locales/en_US/messages.json
@@ -68,18 +68,23 @@
     "no_tabs_found": {"message": "No tabs found"},
     "no_groups_yet": {"message": "There are no groups yet"},
     "settings": {"message": "Settings"},
+    "enter_new_pass": {"message": "Enter a new password"},
+    "pass_updated": {"message": "Password has been updated"},
     "enter_pass": {"message": "Enter a password"},
+    "enter_pass_unlock_content": {"message": "Enter a password to unlock the content of this group"},
+    "wrong_pass": {"message": "Incorrect password"},
+    "cant_remember_pass": {"message": "Something went wrong! Cannot remember your password. Please, enter it again"},
+    "pass_empty": {"message": "Password is empty"},
+    "passwords_not_match": {"message": "Passwords do not match"},
+    "repeat_pass": {"message": "Repeat password"},
     "add_more_links": {"message": "Add more links"},
     "delete_this_group": {"message": "Delete this group"},
     "rename_this_group": {"message": "Rename this group"},
     "additional_options": {"message": "Additional options"},
     "enter_group_name": {"message": "Enter a group name"},
     "group_name": {"message": "Group name"},
-    "enter_pass_unlock_content": {"message": "Enter a password to unlock the content of this group"},
-    "wrong_pass": {"message": "Incorrect password"},
     "group_unlocked": {"message": "Group is unlocked"},
     "group_locked": {"message": "Group is locked"},
-    "cant_remember_pass": {"message": "Something went wrong! Cannot remember your password. Please, enter it again"},
     "error_occurred": {"message": "Error occurred"},
     "open_tabs": {"message": "Open tabs"},
     "open_tabs_delete_group": {"message": "Open tabs and delete this group"},
@@ -89,7 +94,6 @@
     "group_private_unlock_it": {"message": "This group is private. You need to unlock it to see the options"},
     "group_not_found": {"message": "Group has not been found"},
     "group_already_locked": {"message": "Group is already locked"},
-    "pass_empty": {"message": "Password is empty"},
     "private_group_unlocked": {"message": "This private group is unlocked"},
     "no_tabs_to_save": {"message": "No tabs to save"},
     "tabs_now_saved": {"message": "Tabs have been saved"},
@@ -109,8 +113,6 @@
     "change_icon": {"message": "Change Icon"},
     "choose_group_icon": {"message": "Choose a group icon"},
     "icon_is_set": {"message": "Icon has been set"},
-    "repeat_pass": {"message": "Repeat password"},
-    "passwords_not_match": {"message": "Passwords do not match"},
     "export_this_group": {"message": "Export this group"},
     "rebind_to_other_url": {"message": "Rebind to other URL"},
     "enter_new_url_bind_private_to_new_url": {"message": "Enter a new URL to bind your private group to this new URL. This group will be only visible in the list of groups only when you visit this specific URL. Do not forget to lock the group"},
@@ -148,6 +150,5 @@
     "some_groups_already_exist_same_name": {"message": "Some groups that you want to import already exist with the same name. Do you want to replace them?"},
     "replace_groups": {"message": "Replace groups?"},
     "file_chosen": {"message": "File chosen"},
-    "save": {"message": "Save"},
-    "enter_new_pass": {"message": "Enter a new password"}
+    "save": {"message": "Save"}
 }
