--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -68,18 +68,22 @@
     "no_tabs_found": {"message": "Вкладки не найдены"},
     "no_groups_yet": {"message": "Группы пока отсутствуют"},
     "settings": {"message": "Настройки"},
+    "enter_new_pass": {"message": "Введите новый пароль"},
     "enter_pass": {"message": "Введите пароль"},
+    "enter_pass_unlock_content": {"message": "Введите пароль для разблокировки содержимого этой группы"},
+    "wrong_pass": {"message": "Неверный пароль"},
+    "cant_remember_pass": {"message": "Что-то пошло не так! Не могу вспомнить ваш пароль. Пожалуйста, введите его снова"},
+    "repeat_pass": {"message": "Повторите пароль"},
+    "pass_empty": {"message": "Пароль пуст"},
+    "passwords_not_match": {"message": "Пароли не совпадают"},
     "add_more_links": {"message": "Добавить больше вкладок"},
     "delete_this_group": {"message": "Удалить"},
     "rename_this_group": {"message": "Переименовать"},
     "additional_options": {"message": "Дополнительные параметры"},
     "enter_group_name": {"message": "Введите имя группы"},
     "group_name": {"message": "Имя группы"},
-    "enter_pass_unlock_content": {"message": "Введите пароль для разблокировки содержимого этой группы"},
-    "wrong_pass": {"message": "Неверный пароль"},
     "group_unlocked": {"message": "Группа разблокирована"},
     "group_locked": {"message": "Группа заблокирована"},
-    "cant_remember_pass": {"message": "Что-то пошло не так! Не могу вспомнить ваш пароль. Пожалуйста, введите его снова"},
     "error_occurred": {"message": "Произошла ошибка"},
     "open_tabs": {"message": "Открыть вкладки"},
     "open_tabs_delete_group": {"message": "Открыть вкладки и удалить эту группу"},
@@ -89,7 +93,6 @@
     "group_private_unlock_it": {"message": "Эта группа приватная. Разблокируйте её, чтобы увидеть параметры"},
     "group_not_found": {"message": "Группа не найдена"},
     "group_already_locked": {"message": "Группа уже заблокирована"},
-    "pass_empty": {"message": "Пароль пуст"},
     "private_group_unlocked": {"message": "Эта приватная группа разблокирована"},
     "no_tabs_to_save": {"message": "Нет вкладок для сохранения"},
     "tabs_now_saved": {"message": "Вкладки сохранены"},
@@ -109,8 +112,6 @@
     "change_icon": {"message": "Изменить значок"},
     "choose_group_icon": {"message": "Выберите значок группы"},
     "icon_is_set": {"message": "Значок установлен"},
-    "repeat_pass": {"message": "Повторите пароль"},
-    "passwords_not_match": {"message": "Пароли не совпадают"},
     "export_this_group": {"message": "Экспортировать"},
     "rebind_to_other_url": {"message": "Привязать к другому URL"},
     "enter_new_url_bind_private_to_new_url": {"message": "Введите новый URL для привязки вашей приватной группы. Эта группа будет видна только при посещении указанного URL. Не забудьте заблокировать группу"},
@@ -148,6 +149,5 @@
     "some_groups_already_exist_same_name": {"message": "Некоторые группы, которые вы хотите импортировать, уже существуют с таким же именем. Вы хотите заменить их?"},
     "replace_groups": {"message": "Заменить группы?"},
     "file_chosen": {"message": "Файл выбран"},
-    "save": {"message": "Сохранить"},
-    "enter_new_pass": {"message": "Введите новый пароль"}
+    "save": {"message": "Сохранить"}
 }
