--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -68,6 +68,7 @@
     "no_tabs_found": {"message": "未找到标签页"},
     "no_groups_yet": {"message": "还没有组"},
     "settings": {"message": "设置"},
+    "pass_updated": {"message": "密码已更新"},
     "enter_new_pass": {"message": "输入新密码"},
     "enter_pass": {"message": "输入密码"},
     "enter_pass_unlock_content": {"message": "输入密码以解锁该组内容"},
