--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -18,9 +18,9 @@
         }
     },
     "bind_group_url": {
-        "message": "Привяжите эту группу к URL ($url$). Это скроет группу отовсюду, кроме указанного URL, добавив дополнительный уровень безопасности",
+        "message": "Привяжите эту группу к URL ($n$). Это скроет группу отовсюду, кроме указанного URL, добавив дополнительный уровень безопасности",
         "placeholders": {
-            "url": {"content": "$1"}
+            "n": {"content": "$1"}
         }
     },
     "url_must_be_less_than": {
