--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -2,154 +2,172 @@
     "groups_imported": {
         "message": "成功导入 $n$ 个组",
         "placeholders": {
-            "n": {"content": "$1"}
+            "n": { "content": "$1" }
         }
     },
     "many_attempts_locked_for": {
         "message": "尝试次数过多。已锁定 $n$ 分钟",
         "placeholders": {
-            "n": {"content": "$1"}
+            "n": { "content": "$1" }
         }
     },
     "many_attempts_next_attempt_in": {
         "message": "尝试次数过多。下一次尝试在 $n$ 分钟后",
         "placeholders": {
-            "n": {"content": "$1"}
+            "n": { "content": "$1" }
         }
     },
     "bind_group_url": {
         "message": "将该组绑定到 URL ($n$)。此操作会将该组隐藏在其他地方，仅在此 URL 可见，增加一层额外的安全性",
         "placeholders": {
-            "n": {"content": "$1"}
+            "n": { "content": "$1" }
         }
     },
     "url_must_be_less_than": {
         "message": "URL 必须少于 $n$ 个字符",
         "placeholders": {
-            "n": {"content": "$1"}
+            "n": { "content": "$1" }
         }
     },
     "url_must_be_at_least": {
         "message": "URL 必须至少 $n$ 个字符",
         "placeholders": {
-            "n": {"content": "$1"}
+            "n": { "content": "$1" }
         }
     },
-    "ext_name": {"message": "标签守护者"},
-    "ext_description": {"message": "允许您保存和恢复标签页的浏览器扩展，包括使用密码加密它们"},
-    "details": {"message": "详情"},
-    "group_details": {"message": "组详情"},
-    "you_can_find_details_here": {"message": "您可以在这里找到所有的组详情"},
-    "tabs_count": {"message": "标签页数量"},
-    "is_private": {"message": "是否私有"},
-    "created_at": {"message": "创建于"},
-    "last_saved": {"message": "最后保存"},
-    "yes": {"message": "是"},
-    "no": {"message": "否"},
-    "lock": {"message": "锁定"},
-    "emoji": {"message": "表情符号"},
-    "bytes": {"message": "字节"},
-    "rebind": {"message": "重新绑定"},
-    "bound_to_url": {"message": "绑定到 URL"},
-    "opened_tabs_times": {"message": "打开标签页次数"},
-    "opened_tabs_times_tip": {"message": "此组中的标签页被一次性打开的次数，而不是单个标签页的打开次数"},
-    "select": {"message": "选择"},
-    "cancel": {"message": "取消"},
-    "import": {"message": "导入"},
-    "export": {"message": "导出"},
-    "new_group": {"message": "新建组"},
-    "error_no_group_selected": {"message": "出现问题！未选择任何组"},
-    "want_delete_group": {"message": "您确定要删除该组吗？"},
-    "no_links_this_group": {"message": "该组中没有链接"},
-    "click_on_each_tab": {"message": "点击每个标签页以选择或取消选择以保存"},
-    "select_all": {"message": "全选"},
-    "deselect_all": {"message": "取消全选"},
-    "add_tabs": {"message": "添加标签页"},
-    "no_tabs_found": {"message": "未找到标签页"},
-    "no_groups_yet": {"message": "还没有组"},
-    "settings": {"message": "设置"},
-    "pass_updated": {"message": "密码已更新"},
-    "enter_new_pass": {"message": "输入新密码"},
-    "enter_pass": {"message": "输入密码"},
-    "enter_pass_unlock_content": {"message": "输入密码以解锁该组内容"},
-    "wrong_pass": {"message": "密码错误"},
-    "cant_remember_pass": {"message": "出了点问题！无法记住您的密码。请重新输入"},
-    "pass_empty": {"message": "密码为空"},
-    "repeat_pass": {"message": "重复密码"},
-    "passwords_not_match": {"message": "密码不匹配"},
-    "add_more_links": {"message": "添加更多链接"},
-    "delete_this_group": {"message": "删除该组"},
-    "rename_this_group": {"message": "重命名该组"},
-    "additional_options": {"message": "附加选项"},
-    "enter_group_name": {"message": "输入组名称"},
-    "group_name": {"message": "组名称"},
-    "group_unlocked": {"message": "组已解锁"},
-    "group_locked": {"message": "组已锁定"},
-    "error_occurred": {"message": "发生错误"},
-    "open_tabs": {"message": "打开标签页"},
-    "open_tabs_delete_group": {"message": "打开标签页并删除该组"},
-    "copy_tabs_into_group": {"message": "复制标签页到该组"},
-    "move_tabs_into_group": {"message": "移动标签页到该组"},
-    "new_name_saved": {"message": "新名称已保存"},
-    "group_private_unlock_it": {"message": "该组是私有的。您需要解锁以查看选项"},
-    "group_not_found": {"message": "未找到该组"},
-    "group_already_locked": {"message": "该组已锁定"},
-    "private_group_unlocked": {"message": "该私有组已解锁"},
-    "no_tabs_to_save": {"message": "没有标签页可保存"},
-    "tabs_now_saved": {"message": "标签页已保存"},
-    "create_group": {"message": "创建组"},
-    "you_not_selected_tabs": {"message": "您未选择任何标签页"},
-    "tabs_added_to_group": {"message": "标签页已添加到组"},
-    "group_created_without_tabs": {"message": "创建的组没有任何标签页"},
-    "group_created_with_tabs": {"message": "创建的组包含标签页"},
-    "close_selected_tabs": {"message": "关闭选中的标签页"},
-    "bind_to_this_url": {"message": "绑定到此 URL"},
-    "private_groups_are_secure": {"message": "私有组是安全的并使用加密。只有知道密码的用户可以访问"},
-    "rate_us": {"message": "评价我们"},
-    "storage_usage": {"message": "存储使用"},
-    "group_name_long": {"message": "组名称太长"},
-    "contribute": {"message": "贡献"},
-    "release_notes": {"message": "更新说明"},
-    "change_icon": {"message": "更改图标"},
-    "choose_group_icon": {"message": "选择组图标"},
-    "icon_is_set": {"message": "图标已设置"},
-    "export_this_group": {"message": "导出该组"},
-    "rebind_to_other_url": {"message": "重新绑定到其他 URL"},
-    "enter_new_url_bind_private_to_new_url": {"message": "输入一个新 URL 将您的私有组绑定到此新 URL。只有在访问该 URL 时该组才会可见。不要忘记锁定该组"},
-    "enter_new_url_bind_to": {"message": "输入一个新 URL 进行绑定"},
-    "group_rebind_successful": {"message": "组重新绑定成功"},
-    "url_must_start_with_http": {"message": "URL 必须以 http:// 或 https:// 开头"},
-    "select_emoji": {"message": "选择表情符号"},
-    "select_image": {"message": "选择图片"},
-    "input_one_emoji": {"message": "输入内容必须包含一个表情符号"},
-    "enter_any_emoji": {"message": "输入任何表情符号"},
-    "any_emoji_as_group_icon": {"message": "输入一个表情符号将其设置为组图标"},
-    "enter_image_url": {"message": "输入图片 URL"},
-    "type_any_image_url_to_set_it": {"message": "输入任何图片 URL 将其设置为组图标"},
-    "group_name_or_tab_search": {"message": "组名称或标签页标题搜索..."},
-    "change_the_conf_here": {"message": "在此更改扩展配置"},
-    "lock_group_after_restore": {"message": "恢复标签页后重新锁定组"},
-    "erase_all_groups": {"message": "删除所有组"},
-    "i_confirm_want_delete_groups": {"message": "我确认要删除所有组"},
-    "confirm_want_delete_groups": {"message": "确认要删除所有组"},
-    "all_groups_deleted": {"message": "所有组已被删除"},
-    "show_private_groups_incognito": {"message": "仅在浏览器隐身模式下显示私有组。普通模式下将隐藏"},
-    "settings_saved": {"message": "设置已保存"},
-    "go_to_settings_and_enable_allow_incognito": {"message": "前往扩展设置并启用选项“在隐身模式下允许”"},
-    "override_existing_match": {"message": "如果新组名与现有组名匹配，则覆盖"},
-    "only_private_groups_incognito": {"message": "仅在隐身模式下显示私有组"},
-    "export_tab_groups": {"message": "导出标签页组"},
-    "export_all_your_groups": {"message": "导出所有标签页组。请注意，私有组不会被导出。如果需要导出私有组，请单独进行"},
-    "no_groups_export": {"message": "没有组可导出"},
-    "import_groups": {"message": "导入标签页组"},
-    "import_private_public_groups": {"message": "导入私有或公共标签页组"},
-    "choose_exported_file": {"message": "选择导出的文件"},
-    "choose_file_import": {"message": "请选择一个文件进行导入"},
-    "failed_decrypt_file": {"message": "解密文件失败"},
-    "error_reading_file": {"message": "读取文件时出错"},
-    "some_groups_already_exist_same_name": {"message": "要导入的某些组已存在相同名称。您想替换它们吗？"},
-    "replace_groups": {"message": "替换组？"},
-    "file_chosen": {"message": "文件已选择"},
-    "save": {"message": "保存"},
-    "date_format_is": {"message": "日期格式是"}
+    "ext_name": { "message": "标签守护者" },
+    "ext_description": {
+        "message": "允许您保存和恢复标签页的浏览器扩展，包括使用密码加密它们"
+    },
+    "details": { "message": "详情" },
+    "group_details": { "message": "组详情" },
+    "you_can_find_details_here": { "message": "您可以在这里找到所有的组详情" },
+    "tabs_count": { "message": "标签页数量" },
+    "is_private": { "message": "是否私有" },
+    "created_at": { "message": "创建于" },
+    "last_saved": { "message": "最后保存" },
+    "yes": { "message": "是" },
+    "no": { "message": "否" },
+    "lock": { "message": "锁定" },
+    "emoji": { "message": "表情符号" },
+    "bytes": { "message": "字节" },
+    "rebind": { "message": "重新绑定" },
+    "bound_to_url": { "message": "绑定到 URL" },
+    "opened_tabs_times": { "message": "打开标签页次数" },
+    "opened_tabs_times_tip": {
+        "message": "此组中的标签页被一次性打开的次数，而不是单个标签页的打开次数"
+    },
+    "select": { "message": "选择" },
+    "cancel": { "message": "取消" },
+    "import": { "message": "导入" },
+    "export": { "message": "导出" },
+    "new_group": { "message": "新建组" },
+    "error_no_group_selected": { "message": "出现问题！未选择任何组" },
+    "want_delete_group": { "message": "您确定要删除该组吗？" },
+    "no_links_this_group": { "message": "该组中没有链接" },
+    "click_on_each_tab": { "message": "点击每个标签页以选择或取消选择以保存" },
+    "select_all": { "message": "全选" },
+    "deselect_all": { "message": "取消全选" },
+    "add_tabs": { "message": "添加标签页" },
+    "no_tabs_found": { "message": "未找到标签页" },
+    "no_groups_yet": { "message": "还没有组" },
+    "settings": { "message": "设置" },
+    "pass_updated": { "message": "密码已更新" },
+    "enter_new_pass": { "message": "输入新密码" },
+    "enter_pass": { "message": "输入密码" },
+    "enter_pass_unlock_content": { "message": "输入密码以解锁该组内容" },
+    "wrong_pass": { "message": "密码错误" },
+    "cant_remember_pass": { "message": "出了点问题！无法记住您的密码。请重新输入" },
+    "pass_empty": { "message": "密码为空" },
+    "repeat_pass": { "message": "重复密码" },
+    "passwords_not_match": { "message": "密码不匹配" },
+    "add_more_links": { "message": "添加更多链接" },
+    "delete_this_group": { "message": "删除该组" },
+    "rename_this_group": { "message": "重命名该组" },
+    "additional_options": { "message": "附加选项" },
+    "enter_group_name": { "message": "输入组名称" },
+    "group_name": { "message": "组名称" },
+    "group_unlocked": { "message": "组已解锁" },
+    "group_locked": { "message": "组已锁定" },
+    "error_occurred": { "message": "发生错误" },
+    "open_tabs": { "message": "打开标签页" },
+    "open_tabs_delete_group": { "message": "打开标签页并删除该组" },
+    "copy_tabs_into_group": { "message": "复制标签页到该组" },
+    "move_tabs_into_group": { "message": "移动标签页到该组" },
+    "new_name_saved": { "message": "新名称已保存" },
+    "group_private_unlock_it": { "message": "该组是私有的。您需要解锁以查看选项" },
+    "group_not_found": { "message": "未找到该组" },
+    "group_already_locked": { "message": "该组已锁定" },
+    "private_group_unlocked": { "message": "该私有组已解锁" },
+    "no_tabs_to_save": { "message": "没有标签页可保存" },
+    "tabs_now_saved": { "message": "标签页已保存" },
+    "create_group": { "message": "创建组" },
+    "you_not_selected_tabs": { "message": "您未选择任何标签页" },
+    "tabs_added_to_group": { "message": "标签页已添加到组" },
+    "group_created_without_tabs": { "message": "创建的组没有任何标签页" },
+    "group_created_with_tabs": { "message": "创建的组包含标签页" },
+    "close_selected_tabs": { "message": "关闭选中的标签页" },
+    "bind_to_this_url": { "message": "绑定到此 URL" },
+    "private_groups_are_secure": {
+        "message": "私有组是安全的并使用加密。只有知道密码的用户可以访问"
+    },
+    "rate_us": { "message": "评价我们" },
+    "storage_usage": { "message": "存储使用" },
+    "group_name_long": { "message": "组名称太长" },
+    "contribute": { "message": "贡献" },
+    "release_notes": { "message": "更新说明" },
+    "change_icon": { "message": "更改图标" },
+    "choose_group_icon": { "message": "选择组图标" },
+    "icon_is_set": { "message": "图标已设置" },
+    "export_this_group": { "message": "导出该组" },
+    "rebind_to_other_url": { "message": "重新绑定到其他 URL" },
+    "enter_new_url_bind_private_to_new_url": {
+        "message": "输入一个新 URL 将您的私有组绑定到此新 URL。只有在访问该 URL 时该组才会可见。不要忘记锁定该组"
+    },
+    "enter_new_url_bind_to": { "message": "输入一个新 URL 进行绑定" },
+    "group_rebind_successful": { "message": "组重新绑定成功" },
+    "url_must_start_with_http": { "message": "URL 必须以 http:// 或 https:// 开头" },
+    "select_emoji": { "message": "选择表情符号" },
+    "select_image": { "message": "选择图片" },
+    "input_one_emoji": { "message": "输入内容必须包含一个表情符号" },
+    "enter_any_emoji": { "message": "输入任何表情符号" },
+    "any_emoji_as_group_icon": { "message": "输入一个表情符号将其设置为组图标" },
+    "enter_image_url": { "message": "输入图片 URL" },
+    "type_any_image_url_to_set_it": {
+        "message": "输入任何图片 URL 将其设置为组图标"
+    },
+    "group_name_or_tab_search": { "message": "组名称或标签页标题搜索..." },
+    "change_the_conf_here": { "message": "在此更改扩展配置" },
+    "lock_group_after_restore": { "message": "恢复标签页后重新锁定组" },
+    "erase_all_groups": { "message": "删除所有组" },
+    "i_confirm_want_delete_groups": { "message": "我确认要删除所有组" },
+    "confirm_want_delete_groups": { "message": "确认要删除所有组" },
+    "all_groups_deleted": { "message": "所有组已被删除" },
+    "show_private_groups_incognito": {
+        "message": "仅在浏览器隐身模式下显示私有组。普通模式下将隐藏"
+    },
+    "settings_saved": { "message": "设置已保存" },
+    "go_to_settings_and_enable_allow_incognito": {
+        "message": "前往扩展设置并启用选项“在隐身模式下允许”"
+    },
+    "override_existing_match": { "message": "如果新组名与现有组名匹配，则覆盖" },
+    "only_private_groups_incognito": { "message": "仅在隐身模式下显示私有组" },
+    "export_tab_groups": { "message": "导出标签页组" },
+    "export_all_your_groups": {
+        "message": "导出所有标签页组。请注意，私有组不会被导出。如果需要导出私有组，请单独进行"
+    },
+    "no_groups_export": { "message": "没有组可导出" },
+    "import_groups": { "message": "导入标签页组" },
+    "import_private_public_groups": { "message": "导入私有或公共标签页组" },
+    "choose_exported_file": { "message": "选择导出的文件" },
+    "choose_file_import": { "message": "请选择一个文件进行导入" },
+    "failed_decrypt_file": { "message": "解密文件失败" },
+    "error_reading_file": { "message": "读取文件时出错" },
+    "some_groups_already_exist_same_name": {
+        "message": "要导入的某些组已存在相同名称。您想替换它们吗？"
+    },
+    "replace_groups": { "message": "替换组？" },
+    "file_chosen": { "message": "文件已选择" },
+    "save": { "message": "保存" },
+    "date_format_is": { "message": "日期格式是" }
 }
