--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -172,7 +172,7 @@
     },
     "settings_saved": { "message": "Настройки сохранены" },
     "go_to_settings_and_enable_allow_incognito": {
-        "message": "Перейдите в настройки расширения и включите опцию 'Разрешить в режиме инкогнито'"
+        "message": "Перейдите в настройки расширения и включите опцию «Разрешить в инкогнито», «Разрешить в приватном режиме» или «Запустить в приватном режиме Windows»."
     },
     "override_existing_match": {
         "message": "Если имя новой группы совпадает с существующим, замените его"
