--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -64,7 +64,7 @@
     "new_group": { "message": "新建组" },
     "error_no_group_selected": { "message": "出现问题！未选择任何组" },
     "want_delete_group": { "message": "您确定要删除该组吗？" },
-    "no_links_this_group": { "message": "该组中没有链接" },
+    "no_tabs_this_group": { "message": "此组中没有选项卡" },
     "click_on_each_tab": { "message": "点击每个标签页以选择或取消选择以保存" },
     "select_all": { "message": "全选" },
     "deselect_all": { "message": "取消全选" },
@@ -81,7 +81,7 @@
     "pass_empty": { "message": "密码为空" },
     "repeat_pass": { "message": "重复密码" },
     "passwords_not_match": { "message": "密码不匹配" },
-    "add_more_links": { "message": "添加更多链接" },
+    "add_more_tabs": { "message": "添加更多标签页" },
     "delete_this_group": { "message": "删除该组" },
     "rename_this_group": { "message": "重命名该组" },
     "additional_options": { "message": "附加选项" },
