chore: wip on adding cut and copy to tabs

--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -82,6 +82,10 @@
     "repeat_pass": { "message": "重复密码" },
     "passwords_not_match": { "message": "密码不匹配" },
     "add_more_tabs": { "message": "添加更多标签页" },
+    "cut_tab": { "message": "剪下这个标签" },
+    "copy_tab": { "message": "复制此标签页" },
+    "tab_copied": { "message": "标签已复制" },
+    "tab_cut": { "message": "标签已被剪切" },
     "delete_this_group": { "message": "删除该组" },
     "rename_this_group": { "message": "重命名该组" },
     "additional_options": { "message": "附加选项" },
