--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -92,6 +92,10 @@
     "passwords_not_match": { "message": "Passwords do not match" },
     "repeat_pass": { "message": "Repeat password" },
     "add_more_tabs": { "message": "Add more tabs" },
+    "cut_tab": { "message": "Cut this tab" },
+    "copy_tab": { "message": "Copy this tab" },
+    "tab_copied": { "message": "Tab has been copied" },
+    "tab_cut": { "message": "Tab has been cut" },
     "delete_this_group": { "message": "Delete this group" },
     "rename_this_group": { "message": "Rename this group" },
     "additional_options": { "message": "Additional options" },
