--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -92,6 +92,10 @@
     "pass_empty": { "message": "Пароль пуст" },
     "passwords_not_match": { "message": "Пароли не совпадают" },
     "add_more_tabs": { "message": "Добавить больше вкладок" },
+    "cut_tab": { "message": "Вырезать эту вкладку" },
+    "copy_tab": { "message": "Скопировать эту вкладку" },
+    "tab_copied": { "message": "Вкладка скопирована" },
+    "tab_cut": { "message": "Вкладка вырезана" },
     "delete_this_group": { "message": "Удалить" },
     "rename_this_group": { "message": "Переименовать" },
     "additional_options": { "message": "Дополнительные параметры" },
