chore: wip on feature #39

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -208,5 +208,8 @@
     "replace_groups": { "message": "Replace groups?" },
     "file_chosen": { "message": "File chosen" },
     "save": { "message": "Save" },
-    "date_format_is": { "message": "Date format is" }
+    "date_format_is": { "message": "Date format is" },
+    "cant_paste_into_same_group": { "message": "It is not possible to insert a tab into the same group from which it was copied." },
+    "already_copied": { "message": "The tab is already copied. You can paste it into a different group" },
+    "nothing_to_paste": { "message": "There is nothing to paste" }
 }
