--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -205,6 +205,6 @@
     "file_chosen": { "message": "Файл выбран" },
     "save": { "message": "Сохранить" },
     "date_format_is": { "message": "Фортат даты" },
-    "cant_paste_into_same_group": { "message": "Невозможно вставлять вкладку в ту же группу с которой она скопирована" },
+    "tab_pasted": { "message": "Вкладка вставлена в текущую группу" },
     "nothing_to_paste": { "message": "Нет ничего, чтобы вставить" }
 }
