--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -175,6 +175,6 @@
     "file_chosen": { "message": "文件已选择" },
     "save": { "message": "保存" },
     "date_format_is": { "message": "日期格式是" },
-    "cant_paste_into_same_group": { "message": "无法将标签页插入到与复制来源相同的组中" },
+    "tab_pasted": { "message": "该标签已粘贴到当前组中" },
     "nothing_to_paste": { "message": "没有内容可粘贴" }
 }
